Added temporary external CSS file

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -8,6 +8,7 @@
 		<link rel="shortcut icon" href="{Favicon}">
 		<link rel="apple-touch-icon-precomposed" href="{PortraitURL-128}">
 		<link rel="alternate" type="application/rss+xml" href="{RSS}"> -->
+		<link rel="stylesheet" href="discord-theme.css">
 	</head>
 
 	<body class="dark">
@@ -43,6 +44,6 @@
 				<label>Archive</label>
 			</a>
 		</nav>
-		
+
 	</body>
 </html>
