Added placeholder for remaining sidebars and body

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -45,5 +45,11 @@
 			</a>
 		</nav>
 
+		<div class="sidebar">
+			<h1>{Title}</h1>
+			<h2>{Name}</h2>
+			<p>#0000</p>
+		</div>
+		
 	</body>
 </html>
