--- a/discord-theme.html
+++ b/discord-theme.html
@@ -9,6 +9,7 @@
 		<link rel="apple-touch-icon-precomposed" href="{PortraitURL-128}">
 		<link rel="alternate" type="application/rss+xml" href="{RSS}"> -->
 		<link rel="stylesheet" href="discord-theme.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 	</head>
 
 	<body class="dark">
@@ -50,6 +51,12 @@
 			<h2>{Name}</h2>
 			<p>#0000</p>
 		</div>
-		
+
+		<main>
+			<span class="fa fa-adjust" id="darklight" title="Toggle dark/light mode"></span>
+		</main>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="discord-theme.js"></script>
 	</body>
 </html>
