Adjustments to the sidebar section

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -46,10 +46,20 @@
 			</a>
 		</nav>
 
-		<div class="sidebar">
+		<div id="sidebar">
 			<h1>{Title}</h1>
-			<h2>{Name}</h2>
-			<p>#0000</p>
+
+			<div class="channels">
+				
+			</div>
+			
+			<div class="blogname">
+				<img src="https://cdn.discordapp.com/avatars/292313937742135297/d8916d8c9d1dcaed8cb3dbd1ad13de51.png?size=256">
+				<div>
+					<h2>{Name}</h2>
+					<p>#0000</p>
+				</div>
+			</div>
 		</div>
 
 		<main>
