--- a/discord-theme.html
+++ b/discord-theme.html
@@ -53,7 +53,7 @@
 		<div id="sidebar">
 			<header class="banner">
 				<h1>{Title}</h1>
-				<img src="https://cdn.discordapp.com/banners/514949893278924802/f051d066b0543ad78509f121538612f6.jpg?size=512">
+				<img src="https://pbs.twimg.com/media/EaBnu1GUEAAD-2i?format=jpg">
 			</header>
 
 			<nav id="channels">
@@ -72,7 +72,7 @@
 			</nav>
 
 			<div class="blogname">
-				<img src="https://cdn.discordapp.com/avatars/292313937742135297/d8916d8c9d1dcaed8cb3dbd1ad13de51.png?size=256" class="round">
+				<img src="https://pbs.twimg.com/media/EecE6egUcAIzhOp?format=jpg" class="round">
 				<div>
 					<h2>{Name}</h2>
 					<p>#0000</p>
