Added links to referenced theme tools

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -2,7 +2,8 @@
 	Tumblr theme created by wovenstarlight. Original interface design belongs to discordapp.com; I do not claim any rights to the design.
 
 	Credits:
-		Tippy.js tooltips by atomiks
+		Tippy.js tooltips by atomiks: https://atomiks.github.io/tippyjs
+		Toggleable Tumblr controls by seyche: https://seyche.tumblr.com/post/643682133088583680/hi-looove-your-new-blog-theme-i-was-wondering-if
  -->
 <!DOCTYPE html>
 <html>
