--- a/discord-theme.html
+++ b/discord-theme.html
@@ -12,11 +12,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>{Title}{block:TagPage} — {lang:Posts tagged Tag}{/block:TagPage}{block:SearchPage} — {lang:Search results for SearchQuery}{/block:SearchPage}{block:PermalinkPage}{block:PostSummary} — {PostSummary}{/block:PostSummary}{/block:PermalinkPage}</title>
-	<!-- <meta name="description" content="{MetaDescription}">
+	<meta name="description" content="{MetaDescription}">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="shortcut icon" href="{Favicon}">
 	<link rel="apple-touch-icon-precomposed" href="{PortraitURL-128}">
-	<link rel="alternate" type="application/rss+xml" href="{RSS}"> -->
+	<link rel="alternate" type="application/rss+xml" href="{RSS}">
 	<link rel="stylesheet" href="discord-theme.css">
 
 	<meta name="text:Discord Tag" content="0000" />
