Changed header color variable name

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -30,7 +30,7 @@
 	<meta name="font:Header font" content="Ginto"/>
 	<meta name="text:Font size" content="16px" />
 	
-	<meta name="color:Title when header active" content="#fff" />
+	<meta name="color:Title if header is showing" content="#fff" />
 	<meta name="color:Servers navbar" content="#3ba55d"/>
 	<meta name="color:Dark mode headers and accent" content="#fff"/>
 	<meta name="color:Light mode headers and accent" content="#060607"/>
