Adding pagination and headers for more page types

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -130,7 +130,15 @@
 	<header>
 		<div class="pagename">
 			<svg width="1.5em" height="1.5em" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-hash"></use></svg>
-			<h2>{block:HomePage}{lang:Home}{/block:HomePage}{block:AskPage}{AskLabel}{/block:AskPage}{block:SubmitPage}{SubmitLabel}{/block:SubmitPage}</h2>
+			<h2>
+			    {block:HomePage}{lang:Home}{/block:HomePage}
+			    {block:AskPage}{AskLabel}{/block:AskPage}
+			    {block:SubmitPage}{SubmitLabel}{/block:SubmitPage}
+			    {block:TagPage}{lang:Showing TagResultCount posts tagged Tag}{/block:TagPage}
+			    {block:SearchPage}{lang:SearchResultCount results for SearchQuery}{/block:SearchPage}
+			    {block:PostSummary}{PostSummary}{/block:PostSummary}
+			    {block:DayPage}{lang:Posted on DayOfMonth Month Year}{/block:DayPage}
+		    </h2>
 		</div>
 		<div class="icons">
 			<a id="tmblr-controls-toggle" data-tippy-content="Show Tumblr controls"><svg width="1.125em" height="1.125em" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-controls"></use></svg></a>
@@ -151,11 +159,23 @@
 		<svg width="1.25em" height="1.25em" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-copyright"></use></svg>
 		<p>{Name} {CopyrightYears}</p>
 		{block:Pagination}<div class="paginate">
-			{block:PreviousPage}<a class="prev" href="{PreviousPage}" data-tippy-content="Previous"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousPage}
+			{block:PreviousPage}<a class="prev" href="{PreviousPage}" data-tippy-content="{lang:Previous}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousPage}
 			<p class="curr">{CurrentPage}</p>
 			<p>{TotalPages}</p>
-			{block:NextPage}<a class="next" href="{NextPage}" data-tippy-content="Next"><svg width="1.25em" height="1.25em" viewBox="2 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextPage}
+			{block:NextPage}<a class="next" href="{NextPage}" data-tippy-content="{lang:Next}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextPage}
 		</div>{/block:Pagination}
+		
+		{block:PermalinkPagination}<div class="paginate">
+			{block:PreviousPost}<a class="prev" href="{PreviousPost}" data-tippy-content="{lang:Previous post}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousPost}
+			<p>{lang:See more posts}</p>
+			{block:NextPost}<a class="next" href="{NextPost}" data-tippy-content="{lang:Next post}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextPost}
+		</div>{/block:PermalinkPagination}
+		
+		{block:DayPagination}<div class="paginate">
+			{block:PreviousDayPage}<a class="prev" href="{PreviousDayPage}" data-tippy-content="{lang:Previous day}"><svg width="1.25em" height="1.25em" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:PreviousDayPage}
+			<p>{lang:See more posts}</p>
+			{block:NextDayPage}<a class="next" href="{NextDayPage}" data-tippy-content="{lang:Next day}"><svg width="1.25em" height="1.25em" viewBox="3 2 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use xlink:href="#img-arrow"></use></svg></a>{/block:NextDayPage}
+		</div>{/block:DayPagination}
 	</div>
 </main>
 
